# cccc

./: .gitignore  .pre-commit-config.yaml  NOTES.md  README.md  cccc.opam  dune-project  runtests
.github/workflows/: ci.yml  web.yml
lib/: asm.ml  ast.ml  dune  emit.ml  ir_gen.ml  lexer.mll  parser.mly
scratch/: main.c
test/: dune
web/: index.html
